syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "Identity.proto";
import "NaturalPerson.proto";
import "IdentificationDocument.proto";
import "GrpcAddress.proto";
import "Contact.proto";

message CreateCustomerRequest {
	repeated cis.types.Identity Identities = 1;

	bool HardCreate = 2;

	NaturalPerson NaturalPerson = 3;

	IdentificationDocument IdentificationDocument = 4;

	repeated cis.types.GrpcAddress Addresses = 5;

	repeated Contact Contacts = 6;
}

message CreateCustomerResponse {
	cis.types.Identity CreatedCustomerIdentity = 1;
}