syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "Identity.proto";
import "NaturalPerson.proto";
import "IdentificationDocument.proto";
import "GrpcAddress.proto";
import "Contact.proto";

message CustomerDetailRequest {
	cis.types.Identity Identity = 1;
}

message CustomerDetailResponse {
	cis.types.Identity Identity = 1;

	NaturalPerson NaturalPerson = 2;

	IdentificationDocument IdentificationDocument = 3;

    repeated cis.types.GrpcAddress Addresses = 4;

	repeated Contact Contacts = 5;
}